--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,10 +17,17 @@
 	 <res-auth>Container</res-auth>
 	</resource-ref>
 	
+	
+	
+	
+	
+	
+	
+	
 	<context-param>
 		<description>업로드된 파일을 저장할 경로</description>
 		<param-name>fileLocation</param-name>
-		<param-value>C:/playground/upload2</param-value>
+		<param-value>C:/playground/upload</param-value>
 	</context-param>
 	
 
