--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,7 +20,7 @@
 	<context-param>
 		<description>업로드된 파일을 저장할 경로</description>
 		<param-name>fileLocation</param-name>
-		<param-value>/Users/dohyun/desktop/playground/upload</param-value>
+		<param-value>c:/playground/upload</param-value>
 	</context-param>
 	
 
