--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//src/main/webapp/order/insert.jsp=UTF-8
 encoding//src/main/webapp/order/request-stock.jsp=UTF-8
 encoding//src/main/webapp/stock/inbound_list.jsp=UTF-8
 encoding//src/main/webapp/stock/placeorder_head_edit.jsp=UTF-8
