--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,43 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xmlns="https://jakarta.ee/xml/ns/jakartaee" 
-	xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd" 
-	version="6.0">
-  <display-name>Step02DataBase</display-name>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="https://jakarta.ee/xml/ns/jakartaee" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd" version="5.0">
+  <display-name>Project01_Erp</display-name>
   <welcome-file-list>
-    
+    <welcome-file>index.html</welcome-file>
+    <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
-    
+    <welcome-file>index.xhtml</welcome-file>
+    <welcome-file>default.html</welcome-file>
+    <welcome-file>default.htm</welcome-file>
+    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>default.xhtml</welcome-file>
   </welcome-file-list>
   
-  	<resource-ref>
-	 <description>Oracle Datasource example</description>
-	 <res-ref-name>jdbc/myoracle</res-ref-name>
-	 <res-type>javax.sql.DataSource</res-type>
-	 <res-auth>Container</res-auth>
-	</resource-ref>
-	
-	<context-param>
-		<description>업로드된 파일을 저장할 경로</description>
-		<param-name>fileLocation</param-name>
-		<param-value>/Users/dohyun/desktop/playground/upload</param-value>
-	</context-param>
-	
-
-	
+  <resource-ref>
+ 	<description>Oracle Datasource example</description>
+ 	<res-ref-name>jdbc/myoracle</res-ref-name>
+ 	<res-type>javax.sql.DataSource</res-type>
+ 	<res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
