--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,6 +19,16 @@
 	 <res-auth>Container</res-auth>
 	</resource-ref>
 
+	<!-- 주석처리 변경하면서 사용 (임시) -->
+	
+	<!--  
+	<context-param>
+		<description>업로드된 파일을 저장할 경로</description>
+		<param-name>fileLocation</param-name>
+
+		<param-value>/Users/dohyun/project01_erp/src/main/webapp/images</param-value>
+	</context-param>-->
+	
 	<context-param>
 		<description>업로드된 파일을 저장할 경로</description>
 		<param-name>fileLocation</param-name>
